--- a/index.html
+++ b/index.html
@@ -163,14 +163,24 @@
             <p class="text-white font-semibold">Infraestrutura & Automação</p>
           </div>
         </div>
-        <nav class="hidden md:flex items-center gap-7 text-sm text-slate-300 font-medium">
-          <a class="neon-link hover:text-blue-300" href="#sobre">Sobre</a>
-          <a class="neon-link hover:text-blue-300" href="#experiencia">Experiência</a>
-          <a class="neon-link hover:text-blue-300" href="#certificados">Certificados</a>
-          <a class="neon-link hover:text-blue-300" href="#educacao">Educação</a>
-          <a class="neon-link hover:text-blue-300" href="#documentacoes">Projetos</a>
-          <a class="neon-link hover:text-blue-300" href="#contatos">Contato</a>
-        </nav>
+	        <nav class="hidden md:flex items-center gap-7 text-sm text-slate-300 font-medium">
+	          <a class="neon-link hover:text-blue-300" href="#sobre">Sobre</a>
+	          <a class="neon-link hover:text-blue-300" href="#experiencia">Experiência</a>
+	          <a class="neon-link hover:text-blue-300" href="#certificados">Certificados</a>
+	          <a class="neon-link hover:text-blue-300" href="#educacao">Educação</a>
+	          <!-- <a class="neon-link hover:text-blue-300" href="#documentacoes">Projetos</a> -->
+	          <a class="neon-link hover:text-blue-300" href="#contatos">Contato</a>
+	          <a
+	            href="https://wiki.nettotech.com.br/"
+	            target="_blank"
+	            rel="noopener noreferrer"
+	            class="soft-glow inline-flex items-center gap-2 rounded-lg border border-electric/60 bg-electric/85 hover:bg-electric text-white px-4 py-2 font-semibold"
+	            aria-label="Abrir Wiki em nova aba"
+	          >
+	            <span class="material-icons text-[18px]">auto_stories</span>
+	            Wiki
+	          </a>
+	        </nav>
       </div>
     </header>
 
@@ -722,40 +732,129 @@ Também adquiri entendimento sobre segurança na nuvem, princípios de arquitetu
 
 
       <section id="contatos" data-reveal class="py-24">
-        <div class="max-w-7xl mx-auto px-6 grid lg:grid-cols-2 gap-10">
-          <div>
-            <h3 class="text-3xl md:text-4xl text-white font-bold mb-4">Vamos fortalecer sua infraestrutura?</h3>
-            <p class="text-lg text-slate-300 mb-8">Aberto a novos desafios, oportunidades em infraestrutura e projetos de automação.</p>
-            <div class="space-y-4 text-slate-300">
-              <p><strong>Email:</strong> contato@pedronetto.dev</p>
-              <p><strong>LinkedIn:</strong> /in/pedro-henrique-netto</p>
-              <p><strong>GitHub:</strong> /pedrohenriquenetto</p>
-            </div>
-          </div>
+        <div class="max-w-7xl mx-auto px-6">
+	          <div class="rounded-2xl border border-slate-700 bg-graphite/45 p-8 md:p-10 shadow-glow">
+	            <div class="flex items-start justify-between gap-4 mb-6">
+	              <div>
+	                <p class="text-xs uppercase tracking-[0.24em] text-slate-400">Links rápidos</p>
+	                <h4 class="text-white font-semibold text-2xl md:text-3xl leading-tight mt-2">Escolha o melhor canal</h4>
+	              </div>
+	              <span class="inline-flex items-center rounded-full border border-electric/60 px-3 py-1 text-xs uppercase tracking-[0.18em] text-blue-300">Contato</span>
+	            </div>
 
-          <div class="rounded-2xl border border-slate-700 bg-graphite/45 p-7 shadow-glow">
-            <form class="space-y-4">
-              <div>
-                <label class="block text-xs uppercase tracking-[0.2em] text-slate-400 mb-1">Nome</label>
-                <input type="text" placeholder="Seu nome" class="w-full rounded-lg bg-deep/80 border-slate-700 text-slate-100 focus:border-electric focus:ring-electric" />
-              </div>
-              <div>
-                <label class="block text-xs uppercase tracking-[0.2em] text-slate-400 mb-1">Email</label>
-                <input type="email" placeholder="seu@email.com" class="w-full rounded-lg bg-deep/80 border-slate-700 text-slate-100 focus:border-electric focus:ring-electric" />
-              </div>
-              <div>
-                <label class="block text-xs uppercase tracking-[0.2em] text-slate-400 mb-1">Mensagem</label>
-                <textarea rows="4" placeholder="Como posso ajudar seu ambiente?" class="w-full rounded-lg bg-deep/80 border-slate-700 text-slate-100 focus:border-electric focus:ring-electric"></textarea>
-              </div>
-              <button type="submit" class="w-full soft-glow rounded-lg border border-electric/60 bg-electric/90 py-3 text-white font-semibold">Enviar Mensagem</button>
-            </form>
-          </div>
-        </div>
-      </section>
+	            <div class="grid sm:grid-cols-2 gap-4">
+	              <a
+	                href="https://wa.me/5514996807057?text=Ol%C3%A1%20Pedro%2C%20vi%20seu%20site%20e%20gostaria%20de%20conversar."
+	                target="_blank"
+	                rel="noopener noreferrer"
+	                class="soft-glow group relative overflow-hidden rounded-xl border border-slate-700 bg-deep/50 p-5 focus:outline-none focus-visible:ring-2 focus-visible:ring-electric/70 hover:border-electric/60 hover:bg-graphite/45"
+	                aria-label="Abrir WhatsApp em nova aba"
+	              >
+	                <div class="flex items-center gap-4">
+	                  <div class="shrink-0 w-12 h-12 rounded-xl border border-slate-800 bg-graphite/35 grid place-items-center">
+	                    <svg viewBox="0 0 24 24" class="w-6 h-6 text-[#25D366]" aria-hidden="true" focusable="false">
+	                      <path fill="currentColor" d="M12 2a10 10 0 0 0-8.66 15.01L2 22l5.12-1.34A10 10 0 1 0 12 2Zm0 18.2a8.2 8.2 0 0 1-4.18-1.14l-.3-.18-3.04.8.81-2.96-.2-.31A8.2 8.2 0 1 1 12 20.2Zm4.72-6.1c-.26-.13-1.52-.75-1.75-.83-.24-.09-.41-.13-.58.13-.17.26-.67.83-.82 1-.15.18-.3.2-.56.07-.26-.13-1.1-.4-2.1-1.28-.78-.7-1.31-1.56-1.47-1.82-.15-.26-.02-.4.11-.53.12-.12.26-.3.39-.45.13-.15.17-.26.26-.43.09-.17.04-.33-.02-.45-.06-.13-.58-1.4-.8-1.92-.2-.5-.41-.43-.58-.44h-.49c-.17 0-.45.06-.68.33-.24.26-.9.88-.9 2.14 0 1.26.92 2.48 1.05 2.65.13.17 1.81 2.76 4.38 3.87.61.26 1.08.42 1.44.54.6.19 1.15.16 1.58.1.48-.07 1.52-.62 1.73-1.22.22-.6.22-1.12.15-1.22-.06-.1-.24-.16-.5-.29Z"/>
+	                    </svg>
+	                  </div>
+	                  <div class="min-w-0">
+	                    <p class="text-white font-semibold leading-snug">WhatsApp</p>
+	                    <p class="text-xs text-slate-400">Mensagem direta</p>
+	                  </div>
+	                  <span class="ml-auto material-icons text-[18px] text-slate-400 group-hover:text-blue-300">open_in_new</span>
+	                </div>
+	              </a>
+
+	              <a
+	                href="https://www.linkedin.com/in/pedronettods"
+	                target="_blank"
+	                rel="noopener noreferrer"
+	                class="soft-glow group relative overflow-hidden rounded-xl border border-slate-700 bg-deep/50 p-5 focus:outline-none focus-visible:ring-2 focus-visible:ring-electric/70 hover:border-electric/60 hover:bg-graphite/45"
+	                aria-label="Abrir LinkedIn em nova aba"
+	              >
+	                <div class="flex items-center gap-4">
+	                  <div class="shrink-0 w-12 h-12 rounded-xl border border-slate-800 bg-graphite/35 grid place-items-center">
+	                    <svg viewBox="0 0 24 24" class="w-6 h-6 text-[#0A66C2]" aria-hidden="true" focusable="false">
+	                      <path fill="currentColor" d="M4.98 3.5A2.5 2.5 0 1 0 5 8.5a2.5 2.5 0 0 0-.02-5ZM3 21h4V9H3v12Zm7 0h4v-6.5c0-1.76.33-3.47 2.5-3.47 2.14 0 2.15 2 2.15 3.58V21h4V13.8c0-3.53-.76-6.24-4.88-6.24-1.98 0-3.3 1.09-3.84 2.12h-.05V9H10v12Z"/>
+	                    </svg>
+	                  </div>
+	                  <div class="min-w-0">
+	                    <p class="text-white font-semibold leading-snug">LinkedIn</p>
+	                    <p class="text-xs text-slate-400">Conexões & carreira</p>
+	                  </div>
+	                  <span class="ml-auto material-icons text-[18px] text-slate-400 group-hover:text-blue-300">open_in_new</span>
+	                </div>
+	              </a>
+
+	              <a
+	                href="https://facebook.com/PedroNettoDs"
+	                target="_blank"
+	                rel="noopener noreferrer"
+	                class="soft-glow group relative overflow-hidden rounded-xl border border-slate-700 bg-deep/50 p-5 focus:outline-none focus-visible:ring-2 focus-visible:ring-electric/70 hover:border-electric/60 hover:bg-graphite/45"
+	                aria-label="Abrir Facebook em nova aba"
+	              >
+	                <div class="flex items-center gap-4">
+	                  <div class="shrink-0 w-12 h-12 rounded-xl border border-slate-800 bg-graphite/35 grid place-items-center">
+	                    <svg viewBox="0 0 24 24" class="w-6 h-6 text-[#1877F2]" aria-hidden="true" focusable="false">
+	                      <path fill="currentColor" d="M13.5 22v-8h2.7l.4-3h-3.1V9.1c0-.9.3-1.6 1.7-1.6H17V4.7c-.3 0-1.3-.1-2.5-.1-2.5 0-4.2 1.5-4.2 4.2V11H7.7v3h2.6v8h3.2Z"/>
+	                    </svg>
+	                  </div>
+	                  <div class="min-w-0">
+	                    <p class="text-white font-semibold leading-snug">Facebook</p>
+	                    <p class="text-xs text-slate-400">Página / perfil</p>
+	                  </div>
+	                  <span class="ml-auto material-icons text-[18px] text-slate-400 group-hover:text-blue-300">open_in_new</span>
+	                </div>
+	              </a>
+
+	              <a
+	                href="https://youtube.com/@MrNetto"
+	                target="_blank"
+	                rel="noopener noreferrer"
+	                class="soft-glow group relative overflow-hidden rounded-xl border border-slate-700 bg-deep/50 p-5 focus:outline-none focus-visible:ring-2 focus-visible:ring-electric/70 hover:border-electric/60 hover:bg-graphite/45"
+	                aria-label="Abrir YouTube em nova aba"
+	              >
+	                <div class="flex items-center gap-4">
+	                  <div class="shrink-0 w-12 h-12 rounded-xl border border-slate-800 bg-graphite/35 grid place-items-center">
+	                    <svg viewBox="0 0 24 24" class="w-6 h-6 text-[#FF0000]" aria-hidden="true" focusable="false">
+	                      <path fill="currentColor" d="M21.6 7.2a3 3 0 0 0-2.1-2.1C17.7 4.6 12 4.6 12 4.6s-5.7 0-7.5.5A3 3 0 0 0 2.4 7.2 31.4 31.4 0 0 0 2 12c0 1.6.2 3.2.4 4.8a3 3 0 0 0 2.1 2.1c1.8.5 7.5.5 7.5.5s5.7 0 7.5-.5a3 3 0 0 0 2.1-2.1c.2-1.6.4-3.2.4-4.8 0-1.6-.2-3.2-.4-4.8ZM10 15.5v-7l6 3.5-6 3.5Z"/>
+	                    </svg>
+	                  </div>
+	                  <div class="min-w-0">
+	                    <p class="text-white font-semibold leading-snug">YouTube</p>
+	                    <p class="text-xs text-slate-400">Conteúdos & labs</p>
+	                  </div>
+	                  <span class="ml-auto material-icons text-[18px] text-slate-400 group-hover:text-blue-300">open_in_new</span>
+	                </div>
+	              </a>
+
+	              <a
+	                href="https://instagram.com/mrpedronetto"
+	                target="_blank"
+	                rel="noopener noreferrer"
+	                class="soft-glow group relative overflow-hidden rounded-xl border border-slate-700 bg-deep/50 p-5 focus:outline-none focus-visible:ring-2 focus-visible:ring-electric/70 hover:border-electric/60 hover:bg-graphite/45 sm:col-span-2"
+	                aria-label="Abrir Instagram em nova aba"
+	              >
+	                <div class="flex items-center gap-4">
+	                  <div class="shrink-0 w-12 h-12 rounded-xl border border-slate-800 bg-graphite/35 grid place-items-center">
+	                    <svg viewBox="0 0 24 24" class="w-6 h-6 text-pink-400" aria-hidden="true" focusable="false">
+	                      <path fill="currentColor" d="M12 7.3A4.7 4.7 0 1 0 12 16.7a4.7 4.7 0 0 0 0-9.4Zm0 7.7A3 3 0 1 1 12 9a3 3 0 0 1 0 6Zm6-7.9a1.1 1.1 0 1 1-1.1-1.1A1.1 1.1 0 0 1 18 7.1ZM20 8.2c0-1.1-.3-2.1-1.1-3C18.1 4.4 17.1 4 16 4H8c-1.1 0-2.1.4-2.9 1.2C4.3 6.1 4 7.1 4 8.2v7.6c0 1.1.3 2.1 1.1 3 .8.8 1.8 1.2 2.9 1.2h8c1.1 0 2.1-.4 2.9-1.2.8-.9 1.1-1.9 1.1-3V8.2Zm-2.1 9.2c-.4.4-.9.6-1.5.6H7.6c-.6 0-1.1-.2-1.5-.6-.4-.4-.6-.9-.6-1.5V8.1c0-.6.2-1.1.6-1.5.4-.4.9-.6 1.5-.6h8.8c.6 0 1.1.2 1.5.6.4.4.6.9.6 1.5v7.8c0 .6-.2 1.1-.6 1.5Z"/>
+	                    </svg>
+	                  </div>
+	                  <div class="min-w-0">
+	                    <p class="text-white font-semibold leading-snug">Instagram</p>
+	                    <p class="text-xs text-slate-400">Bastidores & atualizações</p>
+	                  </div>
+	                  <span class="ml-auto material-icons text-[18px] text-slate-400 group-hover:text-blue-300">open_in_new</span>
+	                </div>
+	              </a>
+	            </div>
+	          </div>
+	        </div>
+	      </section>
     </main>
 
     <footer class="py-10 border-t border-slate-800 text-center text-slate-400">
-      <p class="italic">Infraestrutura estável é resultado de disciplina técnica, monitoramento e melhoria contínua.</p>
+      <p class="italic">Now is better than never - Zen of Python .</p>
     </footer>
 
 	    <script>
